bug(home): Home: First section of a landing page  - `Get started` button changed to create a cause when the user is logged in  - `Get started` button redirect the user to signup page when not logged in  - The PUT A SMILE grid item reduced and the landing image increased  - PUT A SMILE ON SOMEONE’S FACE in two lines, left-aligned with the navbar alongside the `Get started button`  - use color-hash to generate avatar placeholder background based on user names  - update the navbar and first section padding to match [Delivers]

--- a/components/Navbar/navbar.module.scss
+++ b/components/Navbar/navbar.module.scss
@@ -10,7 +10,7 @@
   display: flex;
   z-index: 1000;
   justify-content: space-between;
-  padding: 1rem 4rem;
+  padding: 1rem 8vw;
   &__logo {
     cursor: pointer;
     max-width: 100% !important;
@@ -37,7 +37,7 @@
     }
 
     @include mediaMd {
-      display: none;
+      display: none !important;
     }
   }
   &__menuNonMobile {
@@ -88,9 +88,13 @@
     }
   }
 
+  @include mediaXL {
+    padding: 1rem 8vw;
+  }
+
   @include mediaMd {
     background: #f4fafb;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
   }
 }
 
